[package]
name = "pm_5min_countdown_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
polymarket-client-sdk = { version = "0.4.1", features = ["clob", "gamma", "ws", "tracing"] }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
alloy = { version = "1.3", default-features = false, features = [
    "signer-local",
    "signers",
    "reqwest",
    "reqwest-rustls-tls",
    "providers",
    "contract",
] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
